# QuantAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: ArtifactPanel.tsx  ClarifyDialog.tsx  EquityVizPreview.tsx  GoalInput.tsx  LogPanel.tsx  PostRunChat.tsx  ProgressBar.tsx  ReportPanel.tsx  WorkflowGraph.tsx
frontend/src/hooks/: useAgentSocket.ts
frontend/src/utils/: pipelineProgress.ts
scripts/: dashboard_dev.py  workflow_demo.py
scripts/agent/: __init__.py  alpha_skill.py  analysis_skill.py  backtest_review.py  backtest_skill.py  clarifier.py  context.py  data_analyst.py  data_loader.py  debug_agent.py  equity_viz.py  events.py  executor.py  feature_skill.py  models.py  plan_revision.py  post_run_chat.py  report_gen.py  state.py  step_thinking.py  subtask_heuristic.py  tool_routing.py  workspace.py
scripts/docs/: tools.md  yfinance_guide.md
scripts/llm/: __init__.py  task_decompose.py  yfinance_spec.py
scripts/storage/: __init__.py  agent_log_db.py
scripts/tools/: __init__.py  alpha.py  analysis.py  backtest.py  data.py  data_analyst_tool.py  data_loader_tool.py  data_spec.py  debug_agent_tool.py  evaluation.py  features.py  regressor.py  search.py  sp500.py
server/: agent_runner.py  app.py
skills/: alpha_engineering.md  backtest.md  data_analysis.md  feature_engineering.md
