[project]
name = "tools-research"
version = "0.1.0"
description = "QuantAgent — NL-driven quant research agent workflow"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "fastapi>=0.135.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
    "yfinance>=1.2.0",
]
